--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -3,36 +3,44 @@
       xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>FinalPlace</title>
 </head>
 <body>
-<h2>Místo ukončení</h2>
-<form action="#" th:action="@{/finalplace/save}" th:object="${finalplace}" method="post">
-        <table width="50%" style="font-size: 18px">
-            <tr>
-                <td>Id</td>
-                <td><input th:field="*{finalPlaceId}" /></td>
-            </tr>
-            <tr>
-                <td>Jméno</td>
-                <td><input th:field="*{title}"/></td>
-            </tr>
+<div class="container">
+    <h2>Místo ukončení</h2>
+    <form action="#" th:action="@{/finalplace/save}" th:object="${finalplace}" method="post">
+        <div class="table-responsive">
+            <table class="table" style="font-size: 18px">
+                <tr>
+                    <td>Id</td>
+                    <td><input th:field="*{finalPlaceId}"/></td>
+                </tr>
+                <tr>
+                    <td>Jméno</td>
+                    <td><input th:field="*{title}"/></td>
+                </tr>
 
-            <tr>
-                <td>Souřadnice</td>
-                <td><input type="text" th:field="*{location}"/></td>
-            </tr>
-            <tr>
-                <td>Čas</td>
-                <td><input type="datetime-local" th:field="*{openingTime}"/></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><input type="submit" value="Uložit"/>
-                </td>
-            </tr>
-        </table>
-</form>
+                <tr>
+                    <td>Souřadnice</td>
+                    <td><input type="text" th:field="*{location}"/></td>
+                </tr>
+                <tr>
+                    <td>Čas</td>
+                    <td><input type="datetime-local" th:field="*{openingTime}"/></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="submit" value="Uložit"/>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </form>
+</div>
 </body>
 </html>
 
