--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -3,62 +3,72 @@
       xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>HintList</title>
 </head>
 <body>
-<h2>Šifra <span th:text="${cypher.name}">cypherName</span></h2>
-<table border="1" width="50%">
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Jméno</th>
-        <th>Poradi</th>
-        <th>Souradnice</th>
-        <th>Odpověď</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:object="${cypher}">
-    <tr>
-        <td th:text="${cypher.cypherId}" align="center">cypherId</td>
-        <td th:text="${cypher.name}">name</td>
-        <td th:text="${cypher.stage}" align="center">stage</td>
-        <td th:text="${cypher.location}">X, Y</td>
-        <td th:text="${cypher.codeword}">codeword</td>
-    </tr>
-    </tbody>
-</table>
-<br>
-<br>
-<h2>.. a její hinty</h2>
-<table border="1" width="50%">
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Text</th>
-        <th>Hodnota</th>
-        <td align="center">Akce</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="hint : ${cypher.hints}">
-        <td th:text="${hint.hintId}" align="center">hintId</td>
-        <td th:text="${hint.text}">text</td>
-        <td th:text="${hint.value}">value</td>
-        <td align="center">
-            <a href="#" th:href="@{/hint/update/{hintId}(hintId=${hint.hintId})}">Upravit</a> |
-            <a href="#" th:href="@{/hint/delete/{hintId}(hintId=${hint.hintId})}">Smazat</a>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="4" align="center">
-            <a href="#" th:href="@{/hint/new(cypherId=${cypher.cypherId})}">Přidat</a>
-        </td>
+<div class="container">
+    <h2>Šifra <span th:text="${cypher.name}">cypherName</span></h2>
+    <div class="table-responsive">
+        <table class="table" border="1">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Jméno</th>
+                <th>Poradi</th>
+                <th>Souradnice</th>
+                <th>Odpověď</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:object="${cypher}">
+            <tr>
+                <td th:text="${cypher.cypherId}" align="center">cypherId</td>
+                <td th:text="${cypher.name}">name</td>
+                <td th:text="${cypher.stage}" align="center">stage</td>
+                <td th:text="${cypher.location}">X, Y</td>
+                <td th:text="${cypher.codeword}">codeword</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <br>
+    <br>
+    <h2>.. a její hinty</h2>
+    <div class="table-responsive">
+        <table class="table" border="1">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Text</th>
+                <th>Hodnota</th>
+                <td align="center">Akce</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="hint : ${cypher.hints}">
+                <td th:text="${hint.hintId}" align="center">hintId</td>
+                <td th:text="${hint.text}">text</td>
+                <td th:text="${hint.value}">value</td>
+                <td align="center">
+                    <a href="#" th:href="@{/hint/update/{hintId}(hintId=${hint.hintId})}">Upravit</a> |
+                    <a href="#" th:href="@{/hint/delete/{hintId}(hintId=${hint.hintId})}">Smazat</a>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="4" align="center">
+                    <a href="#" th:href="@{/hint/new(cypherId=${cypher.cypherId})}">Přidat</a>
+                </td>
 
-    </tr>
-</table>
-<br>
-<a align="center" href="#" th:href="@{../cypher}"><b>Zpět na seznam šifer</b></a>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <a align="center" href="#" th:href="@{../cypher}"><b>Zpět na seznam šifer</b></a>
+</div>
 </body>
 </html>
 
