--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -3,11 +3,17 @@
       xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>Luštěniny - Hinty</title>
 </head>
 <body>
+<div class="container">
 <h2>Dostupné hinty pro Šifru <span th:text="${cypher.name}"></span></h2>
-<table border="1" width="50%">
+    <div class="table-responsive">
+<table class="table" border="1">
     <thead>
     <tr>
         <th>Hodnota</th>
@@ -24,6 +30,8 @@
         <td th:text="${takenHints.get(hint.hintId)}" align="center"></td>
     </tr>
 </table>
+    </div>
+</div>
 </body>
 </html>
 
