--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -68,6 +68,10 @@
     </div>
     <br>
     <a align="center" href="#" th:href="@{/progress}"><b>Zpět na seznam šifer</b></a>
+    <form action="/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <button type="submit">Odhlásit</button>
+    </form>
 
 </div>
 </body>
