vytvorena user repository, user entity a user service

--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lušteniny - přhlášeníLogin</title>
+    <title>Lušteniny - přhlášení</title>
 </head>
 <body>
 <div class="log-form">
